{
    "name": "Player Input",
    "maps": [
        {
            "name": "Player",
            "id": "294930f7-a661-46aa-bfa4-bf9ce4f2fceb",
            "actions": [
                {
                    "name": "Keyboard",
                    "type": "Value",
                    "id": "0c373ca0-71a7-4bb3-8ea0-206d8387ff72",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FlipUp",
                    "type": "Button",
                    "id": "e52da68b-1272-4635-9690-a8d19797fef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FlipDown",
                    "type": "Button",
                    "id": "c1aa5e49-c4b5-4497-8f61-497a042124f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "ea100c6c-4e55-45c5-a860-b16925b612ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left",
                    "id": "307fb27a-1427-4572-b4c1-1cb721b4f918",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5ea451d4-4699-4ead-8f6f-eb08f3793bce",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Left Keyboard",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c5da24a9-6540-498d-8230-0a77dcf3a955",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Left Keyboard",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "824175fa-73f5-4bca-9c3c-38c0bcbb00a8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "30555a3b-485a-4c72-ba93-3db9ad5c8ecd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Right Keyboard",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8aeeb2d2-0401-4305-9ec3-a845e3030f1c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Right Keyboard",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8b549f5a-539e-40f1-8595-187a3e8cf7a5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Right Keyboard",
                    "action": "FlipUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7addb347-07bc-448e-9ae4-30f88b1c2394",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Left Keyboard",
                    "action": "FlipUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb9be57b-4663-45d9-8db1-0fe74cb04b7c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Right Keyboard",
                    "action": "FlipDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e7a7147-1d17-4921-849a-e8d16c253b1b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Left Keyboard",
                    "action": "FlipDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d0e90e4-f78b-4e75-b1dd-b6ac12e09c13",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Left Keyboard;Right Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Left Keyboard",
            "bindingGroup": "Left Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Right Keyboard",
            "bindingGroup": "Right Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}